--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .App {
   text-align: center;
+  transition-property: background-color;
+  transition-duration: 0.2s;
+}
+
+.row {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-between;
+  width: 100vw;
+  align-items: center;
 }
 
 .App-logo {
@@ -7,14 +17,8 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
-  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -24,15 +28,20 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes fade-in {
+  0% {opacity: 0;}
+  50% {opacity: 0;}
+  100% {opacity: 1;}
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.switchContainer {
+  transform: scale(180%);
+  animation: fade-in 1s linear;
+}
+
+.funMessage {
+  height: 0;
+  transform: translateY(40px);
+  transition-property: opacity;
+  transition-duration: 0.5s;
 }
