--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 .row {
   display: flex;
   flex-flow: row nowrap;
-  justify-content: space-between;
+  justify-content: space-around;
   width: 100vw;
   align-items: center;
 }
